# reconsidered_rag

./: .dockerignore  .env.example  .gitignore  01_download_model.py  01_download_model_phi4.py.bak  01_prepare_content.py  01_prepare_markdowndocs.py  01_prepare_officedocs.py  02_chunk_content.py  02_enrich_content.py  02_prepare_content.py  02_prepare_content_phi4.py.bak  03_build_vector_db.py  03_chunk_content.py  03_propositional_chunking_phi4.py.bak  03_semantic_chunking.py  04_build_vector_db.py  04_mcp_server.py  05_build_mcp_server.py  05_mcp_server.py  99_cleanup.py  AGENTS.md  Dockerfile  HISTORY.md  IMPLEMENTATION.md  LICENSE.md  README.ko.md  README.md  docker-compose.yml  embedding_model.py  entrypoint.sh  example_sqlitevec_mcp.py  main.py  prepare_utils.py  pyproject.toml
.cursor/: mcp.json
.github/: FUNDING.yml
cache/: .gitkeep
input_docs/: sample_document.md  semantic_chunking_guide.md
