[project]
name = "aipack"
version = "0.1.0"
description = "AI-powered document processing with Phi-4 ONNX model for propositional chunking"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "flagembedding>=1.3.5",
    "huggingface-hub[hf_xet]>=0.20.0",
    "langdetect>=1.0.9",
    "markitdown[all]>=0.1.4",
    "mcp[cli]>=1.25.0",
    "mistune>=3.2.0",
    "onnx>=1.20.0",
    "onnxruntime>=1.20.1",
    "onnxruntime-genai>=0.5.0",
    "optimum[onnxruntime]>=2.1.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pymupdf4llm>=0.2.7",
    "pyyaml>=6.0",
    "sentence-transformers>=5.2.0",
    "sqlite-vec>=0.1.6",
    "tqdm>=4.65.0",
    "transformers>=4.57.3",
    "typer>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
download-model = "01_download_model:main"
prepare-content = "02_prepare_content:main"
